ToDoApp-K8S-Manifests/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-webapp
  template:
    metadata:
      labels:
        app: todo-webapp
    spec:
      containers:
      - name: todo-container
        image: carro92/todoapp:52df472739238e65656b25aafc03c99e8e768ef7
        ports:
        - containerPort: 80
